[package]
name = "starknet_api"
version = "0.8.0"
edition = "2021"
repository = "https://github.com/starkware-libs/starknet-api"
license = "Apache-2.0"
license-file = "LICENSE"
description = "Starknet Rust types related to computation and execution."

[features]
default = []
testing = []
parity-scale-codec = ["dep:parity-scale-codec"]
scale-info = ["dep:scale-info"]

[dependencies]
cairo-lang-starknet-classes = { git = "https://github.com/bidzyyys/cairo.git", branch = "feature/scale-codec" }
derive_more = "0.99.17"
hex = "0.4.3"
indexmap = { version = "2.1.0", features = ["serde"] }
once_cell = "1.17.1"
primitive-types = { version = "0.12.1", features = ["serde", "impl-codec", "scale-info"] }
serde = { version = "1.0.130", features = ["derive", "rc"] }
serde_json = "1.0.81"
starknet-crypto = "0.5.1"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.31"
parity-scale-codec = { version = "3.6.5", features = [
    "derive",
], optional = true}
scale-info = { version = "2.10.0", features = ["derive"], optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
